force-app/main/default/objects/Loyalty_Profile__c/fields/Available_Points__c.field-meta.xml
<CustomField>
    <fullName>Available_Points__c</fullName>
    <description>Total points available on the user.</description>
    <formula>Total_Points_Accrued__c -  Total_Points_Redeemed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>