force-app/main/default/objects/Loyalty_Profile__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>Last name of the ecommerce user.</description>
    <label>Last Name</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>