force-app/main/default/objects/Loyalty_Profile__c/fields/Referral_Code__c.field-meta.xml
<CustomField>
    <fullName>Referral_Code__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Referral code of the user that can be used to refer other users.</description>
    <label>Referral Code</label>
    <length>8</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>