force-app/main/default/objects/Loyalty_Profile__c/fields/Reward_Points_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Reward_Points_Expiry_Date__c</fullName>
    <description>Expiry date of the user&apos;s reward points that were accrued the latest.</description>
    <label>Latest Reward Points Expiry Date</label>
    <type>Date</type>
</CustomField>