force-app/main/default/objects/Loyalty_Profile__c/fields/Total_Points_Accrued__c.field-meta.xml
<CustomField>
    <fullName>Total_Points_Accrued__c</fullName>
    <description>Total reward points accrued by the user.</description>
    <label>Total Points Accrued</label>
    <summarizedField>Point_Ledger__c.Total_Points__c</summarizedField>
    <summaryFilterItems>
        <field>Point_Ledger__c.Transaction_Type__c</field>
        <operation>equals</operation>
        <value>Accrual</value>
    </summaryFilterItems>
    <summaryForeignKey>Point_Ledger__c.Loyalty_Profile__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>