force-app/main/default/objects/Loyalty_Profile__c/fields/Was_Referral_Popup_Displayed__c.field-meta.xml
<CustomField>
    <fullName>Was_Referral_Popup_Displayed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To show Referral Pop Up only once when user logs in to the portal</description>
    <label>Was Referral Popup Displayed</label>
    <type>Checkbox</type>
</CustomField>